--- a/app/zui5.rota/webapp/view/Rotas.view.xml
+++ b/app/zui5.rota/webapp/view/Rotas.view.xml
@@ -44,7 +44,7 @@
 			</l:fixContent>
 			<l:flexContent>
 				<gmaps:Map id="gmap" height="1000px" zoom="12" 
-					apiKey="AIzaSyA63ZYPAHpOv8QCbWjqAns86P9VAKzXv7g">
+					apiKey="<--API KEY HERE-->">
 					<!-- Adicioanr markers="{/Rota}" na tag Map-->
 					<!-- <gmaps:markers >
 						<gmaps:Marker id="maker2" info="{nome} - {cidade}" lat="-29.795055432	023386" lng="-51.14944913172376"/>
